--- a/resources/assets/sass/ermak.scss
+++ b/resources/assets/sass/ermak.scss
@@ -345,3 +345,8 @@ div.reasons ul li:hover div .black {
     font-weight: 500;
   }
  }
+
+.match-bg{
+  background: url(../img/match3.png) no-repeat right;
+  background-size: 65px;
+}
